amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-id-scalar.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-id-scalar.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#invalid-default-value-type-directive
  Message: Expecting 'ID' value but got 'null' value instead
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/arguments-id-scalar.api.graphql#/declares/invalid1/shape/default-node
  Property: http://a.ml/vocabularies/data#value
  Range: [(8,35)-(8,39)]
  Location: 
